# portfolio

./: .dir-locals.el  .gitignore  Cargo.toml  Containerfile  Dockerfile  README.org  andy_replace.js  build.sh  contactPage.html  generate.sh  index.html  menuPage.html  p15_Smoke.html  package-lock.json  package.json  pnpm-lock.yaml  test_build.sh  tsconfig.json
crates/andy_webgl_utils/: Cargo.toml
crates/andy_webgl_utils/src/: lib.rs
crates/boltzman/: Cargo.toml
crates/boltzman/src/: lib.rs
crates/generate_sphere_util/: Cargo.toml
crates/generate_sphere_util/src/: lib.rs
crates/icosahedron/: Cargo.toml
crates/icosahedron/src/: lib.rs
crates/inter_molecular_forces/: Cargo.toml
crates/inter_molecular_forces/src/: lib.rs
crates/mandelbrot/: Cargo.toml
crates/mandelbrot/src/: lib.rs
crates/maxwell_boltzman/: Cargo.toml
crates/maxwell_boltzman/src/: lib.rs
crates/maxwell_boltzmann/: Cargo.toml
crates/maxwell_boltzmann/src/: lib.rs
crates/orbit_camera/: Cargo.toml
crates/orbit_camera/src/: lib.rs
crates/schrödinger/: Cargo.toml
crates/schrödinger/src/: lib.rs
html_generator/: include_code.tsx  main.tsx  render_math.tsx  wrapper.tsx
html_generator/includes/: about_info.tsx  menu_list.tsx  navbar.tsx
html_generator/pages/: about_page.tsx  index.tsx  menu_page.tsx
html_generator/pages/projects/: 2body.tsx  boltzman_derivation.tsx  boltzman_distribution.tsx  boltzmann_derivation.tsx  capstone.tsx  delta_gcode.tsx  depth_perception.tsx  dirac_spinor.tsx  fire.tsx  fluctuation_dissipation_theorem.tsx  fluid_sim_navier_stokes.tsx  fokker_plank.tsx  free_energy_gradient.tsx  icosahedron.tsx  incompleteness_theorem.tsx  inter_molecular_forces.tsx  jello.tsx  kernel_module_encoder_driver.tsx  langevin_dynamics.tsx  mandelbrot.tsx  maxwell_boltzman_distribution.tsx  maxwell_boltzmann_distribution.tsx  motor_pwm.tsx  phone_controller.tsx  planets.tsx  pulse_width_modulation.tsx  schrödinger.tsx  seedling_segmentation.tsx  seedlings_tensorflow.tsx  sphere_reflection_texture.tsx  sphere_shadows.tsx  statistical_mechanics_derivation.tsx  time_evolution.tsx  water_marbles.tsx
icosahedron/: index.html
icosahedron/wasm/: icosahedron.js
includes/: about_info.html  menu_list.html  navbar.html
navier_stokes/wasm/: navier_stokes_bg.wasm  navier_stokes_bg.wasm.d.ts
new_stuff/andy_wasm/: icosahedron.d.ts  icosahedron.js  icosahedron_bg.wasm  icosahedron_bg.wasm.d.ts
projects/: p02_PWM.html
projects/2body/: index.html
projects/boltzman_distribution/: index.html
projects/delta_gcode/: index.html
projects/depth_perception/: index.html
projects/fire/: index.html
projects/fluid_sim_navier_stokes/: index.html
projects/icosahedron/wasm/: icosahedron_bg.wasm  icosahedron_bg.wasm.d.ts
projects/inter_molecular_forces/: index.html
projects/jello/: index.html
projects/kernel_module_encoder_driver/: encoder.makefile  gui.py  index.html
projects/mandelbrot/: index.html  mandelbrot.frag
projects/motor_pwm/: index.html
projects/navier_stokes/wasm/: navier_stokes.d.ts
projects/phone_controller/: index.html  phone_code.js  socket.c
projects/planets/: index.html
projects/pulse_width_modulation/: index.html  rpi.makefile
projects/seedling_segmentation/: index.html
projects/seedlings_tensorflow/: data_generator.py  index.html
projects/sphere_reflection_texture/: index.html  shader.frag  shader.vert
projects/sphere_shadows/: index.html
projects/water_marbles/: index.html
resume/: resume.ps  resume.tex
src/: Main.tsx  build.ts  include_code.tsx  main.tsx  p14_Earth.php  wrapper.tsx
src/includes/: about_info.tsx  menu_list.tsx
src/pages/: about_page.tsx  index.tsx  menu_page.tsx
src/pages/projects/: 2body.tsx  boltzman_distribution.tsx  capstone.tsx  delta_gcode.tsx  depth_perception.tsx  fire.tsx  fluid_sim_navier_stokes.tsx  icosahedron.tsx  inter_molecular_forces.tsx  jello.tsx  kernel_module_encoder_driver.tsx  mandelbrot.tsx  motor_pwm.tsx  phone_controller.tsx  planets.tsx  pulse_width_modulation.tsx  seedling_segmentation.tsx  (+4 more)
src/postscript/: test.sh
static/: Andy-Bruce-Resume.ps  aboutPage.html  andy_include_code.js  build.sh  helpPage.html  keys.txt  style.css
static/new_stuff_src/: Cargo.toml
test_react_static/: .gitignore  generate.sh  package.json  pnpm-lock.yaml
test_react_static/src/: Main.tsx  Navbar.tsx  pages.tsx
test_react_static/static/: style.css
tmp/: Video-wheat-720.mov
(+40 files in other folders)
