[workspace]
resolver = "2"
members = [
  "crates/andy_webgl_utils",
  "crates/icosahedron",
  "crates/navier_stokes",
  "crates/mandelbrot"
]

[workspace.dependencies]
wasm-bindgen = "0.2.92"
andy_webgl_utils = { path = "crates/andy_webgl_utils" }
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.66"
console_error_panic_hook = "0.1.7"
cgmath = "0.18.0"
web-sys = "0.3.66"
