[workspace]
resolver = "2"
members = [
  "crates/orbit_camera",
  "crates/andy_webgl_utils",
  "crates/generate_sphere_util",
  "crates/icosahedron",
  "crates/mandelbrot",
  "crates/maxwell_boltzman",
  "crates/schrödinger",
  "crates/inter_molecular_forces",
]

[workspace.dependencies]
wasm-bindgen = "0.2.95"
andy_webgl_utils = { path = "crates/andy_webgl_utils" }
orbit_camera = { path = "crates/orbit_camera" }
generate_sphere_util = { path = "crates/generate_sphere_util" }
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3.69"
console_error_panic_hook = "0.1.7"
cgmath = "0.18.0"
web-sys = "0.3.69"
