[package]
name = "maxwell_boltzman_distribution"
version = "0.1.0"
edition = "2021"
authors = ["陈功 <andy@andycbruce.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
andy_webgl_utils = { workspace = true }
orbit_camera = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
console_error_panic_hook = { workspace = true }
cgmath = { workspace = true }
generate_sphere_util = { workspace = true }

[dependencies.web-sys]
workspace = true
features = [
  "console",
  'Window',
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'WebGl2RenderingContext',
  'WebGlBuffer',
  'WebGlShader',
  'WebGlProgram',
  'WebGlVertexArrayObject',
  'WebGlUniformLocation',
  'EventListener',
  'Event',
  'MouseEvent',
  'WheelEvent',
  "CanvasRenderingContext2d"
]
